# SysEcho

./: Cargo.toml  README.md
src/: main.rs
src/modules/: battery.rs  containers.rs  hostinfo.rs  mod.rs  network.rs  process.rs  systeminfo.rs
