[package]
name = "sysecho"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.30" 
whoami = "1.4"
battery = "0.7.8"
get_if_addrs = "0.5"
duct = "0.13"

colored = "2.1"
console = "0.15"   
tui-logger = "0.9"     


serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }

